--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ button a {
 
 #play-submit-div {
   border: solid 2px green;
+  z-index: 1;
   height: 250px;
   width: 250px;
   align-content: center;
@@ -117,12 +118,11 @@ button:hover {
   opacity: 1;
   max-height: 500px;
   max-width: 70%;
-  transition: opacity 0.5s ease, max-height 0.5s ease; 
 }
 
 .invisible {
+  z-index: -1;
   opacity: 0;
   max-height: 0;
   overflow: hidden;
-  transition: opacity 0.5s ease, max-height 0.5s ease;
 }
