--- a/assets/css/gamepage.css
+++ b/assets/css/gamepage.css
@@ -1,7 +1,27 @@
-#dealer-cards-container img{
-    width: 200px;
+body{
+    background-color: green;
+    background-image: url("https://static.vecteezy.com/system/resources/previews/024/232/274/non_2x/green-casino-poker-table-texture-game-background-free-vector.jpg");
 }
 
-#player-cards-container{
-    
+aside{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+body{
+    height: 100vh;
+}
+
+
+#dealer-cards-container img{
+    width: 150px;
+}
+
+#player-cards-container img{
+    width: 150px;
+}
+
+h2{
+    color: white;
+    font-weight: bold !important;
 }
